--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
     </div>
         <!-- Game Scripts - Load order is important -->
     <script src="js/libs.js"></script>
+    <script src="js/countriesData.js"></script>
+    <script src="js/countriesData.js"></script>
+    <script src="js/careers.js"></script>
+    <script src="js/items.js"></script>
+    <script src="js/assets.js"></script>
+    <script src="js/characters.js"></script>
+    <script src="js/events.js"></script>
+    <script src="js/worldEvents.js"></script>
+    <script src="js/windowsSystem.js"></script>
+    <script src="js/windowsExtended.js"></script>
+    <script src="js/windowsItems.js"></script>
     <script src="js/main.js"></script>
     <script src="js/menuCore.js"></script>
     <script src="js/menuProfile.js"></script>
@@ -180,7 +191,6 @@
     <script src="js/menuShopping.js"></script>
     <script src="js/menuCareer.js"></script>
     <script src="js/menuMusicCareer.js"></script>
-    <script src="js/windowsSystem.js"></script>
     <script src="js/windowsItems.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/items.js"></script>
