--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             </div>
         </div>
     </div>
-        <!-- Game Scripts - Load order is important -->
+    <!-- Game Scripts - Load order is important -->
     <script src="js/libs.js"></script>
-    <script src="js/countriesData.js"></script>
+    <script src="js/gameSystem.js"></script>
     <script src="js/countriesData.js"></script>
     <script src="js/careers.js"></script>
     <script src="js/items.js"></script>
@@ -191,9 +191,7 @@
     <script src="js/menuShopping.js"></script>
     <script src="js/menuCareer.js"></script>
     <script src="js/menuMusicCareer.js"></script>
-    <script src="js/windowsItems.js"></script>
     <script src="js/menu.js"></script>
-    <script src="js/items.js"></script>
     <script src="js/interface.js"></script>
     <script>
         // Initialize menu options after all scripts are loaded
