--- a/index.html
+++ b/index.html
@@ -1,205 +1,263 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#2C3E50">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
-    <title>QuickLife - Modern Life Simulator</title>
-    <meta name="description" content="A modern life simulation game where you can live, work, and make choices that shape your virtual life.">
-</head>
-<body>
-
-    <!-- Splash Screen -->
-    <div id="splash-screen">
-        <div id="splash-content">
-            <div id="dev-logo">
-                <h3>AciddGames</h3>
-                <p>Presents</p>
-            </div>
-            <div id="game-title">
-                <h1>LifeWay</h1>
-                <p>A Life Simulation Experience</p>
-            </div>
-            <div id="splash-loading">
-                <div class="loading-bar">
-                    <div class="loading-progress"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+        />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta
+            name="apple-mobile-web-app-status-bar-style"
+            content="black-translucent"
+        />
+        <meta name="theme-color" content="#2C3E50" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+            integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="stylesheet" href="styles.css" />
+        <title>QuickLife - Modern Life Simulator</title>
+        <meta
+            name="description"
+            content="A modern life simulation game where you can live, work, and make choices that shape your virtual life."
+        />
+    </head>
+    <body>
+        <!-- Splash Screen -->
+        <div id="splash-screen">
+            <div id="splash-content">
+                <div id="dev-logo">
+                    <h3>AciddGames</h3>
+                    <p>Presents</p>
                 </div>
-                <p>Loading...</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Main Menu -->
-    <div id="main-menu-screen">
-        <div id="main-menu-content">
-            <div id="menu-title">
-                <h1>LifeWay</h1>
-                <p>Choose your path</p>
-            </div>
-            <div id="menu-buttons">
-                <button class="menu-btn primary" onclick="showCharacterCreation()">
-                    <i class="fa-solid fa-play"></i>
-                    <span>New Life</span>
-                </button>
-                <button class="menu-btn" onclick="alert('Coming Soon!')">
-                    <i class="fa-solid fa-folder-open"></i>
-                    <span>Load Game</span>
-                </button>
-                <button class="menu-btn" onclick="showSettings()">
-                    <i class="fa-solid fa-cog"></i>
-                    <span>Settings</span>
-                </button>
-                <button class="menu-btn" onclick="showAbout()">
-                    <i class="fa-solid fa-info-circle"></i>
-                    <span>About</span>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Character Creation Screen -->
-    <div id="create-character-screen">
-        <div id="character-creation-content">
-            <h1>Create Your Character</h1>
-            <div id="creation-buttons">
-                <button class="creation-btn" onclick="randomCharacter()">
-                    <i class="fa-solid fa-dice"></i>
-                    <span>Random Character</span>
-                    <p>Generate a random character</p>
-                </button>
-                <button class="creation-btn" onclick="displayCustomization()">
-                    <i class="fa-solid fa-user-edit"></i>
-                    <span>Custom Character</span>
-                    <p>Customize your character</p>
-                </button>
-            </div>
-            <button class="back-btn" onclick="backToMainMenu()">
-                <i class="fa-solid fa-arrow-left"></i>
-                Back to Menu
-            </button>
-        </div>
-    </div>
-
-    <div id="modal-background" class="modal">
-        <div class="event-container" id="event-container">
-            <h2 class="event-title" id="event-title"></h2>
-            <hr>
-            <div class="event-body" id="event-body"></div>
-        </div>
-    </div>
-    <div id="events-container">
-
-    </div>
-    <nav id="navbar">
-        <div id="money-container" onclick="windows.playerData.moneyDashboard()" title="Display flow of money">
-            <p id="total-money">0 $</p>
-            <p id="balance"></p>
-        </div>
-    </nav>
-    <main>
-        <div id="tale-container">
-            <div id="head-container">
-                Childhood
-            </div>
-            <div id="text-container"></div>
-        </div>
-        <div id="control-container">
-            <div class="row">
-                <div class="button-container" id="left-btn-container">
-
+                <div id="game-title">
+                    <h1>LifeWay</h1>
+                    <p>A Life Simulation Experience</p>
                 </div>
-                <div class="button-container nav-btn" id="relationship-container">
-                    <button onclick="menu.relationships()" class="btn navigation-btn" id="relation-button">
-                        <i class="fa-solid fa-heart"></i>
+                <div id="splash-loading">
+                    <div class="loading-bar">
+                        <div class="loading-progress"></div>
+                    </div>
+                    <p>Loading...</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Main Menu -->
+        <div id="main-menu-screen">
+            <div id="main-menu-content">
+                <div id="menu-title">
+                    <h1>LifeWay</h1>
+                    <p>Choose your path</p>
+                </div>
+                <div id="menu-buttons">
+                    <button
+                        class="menu-btn primary"
+                        onclick="showCharacterCreation()"
+                    >
+                        <i class="fa-solid fa-play"></i>
+                        <span>New Life</span>
                     </button>
-                    <p>Relationships</p>
-                </div>
-                <div class="button-container nav-btn" id="profile-container">
-                    <button onclick="menu.profile()" class="btn navigation-btn">
-                        <i class="fa-solid fa-user"></i>
+                    <button class="menu-btn" onclick="alert('Coming Soon!')">
+                        <i class="fa-solid fa-folder-open"></i>
+                        <span>Load Game</span>
                     </button>
-                    <p>Profile</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="button-container nav-btn" id="job-btn-container">
-                    <button onclick="handleCareerClick()" class="btn navigation-btn" id="career-button">
-                        <i class="fa-solid fa-briefcase"></i>
+                    <button class="menu-btn" onclick="showSettings()">
+                        <i class="fa-solid fa-cog"></i>
+                        <span>Settings</span>
                     </button>
-                    <p>Career</p>
-                </div>
-                <div class="button-container" id="age-btn-container">
-                    <button id="age-btn" class="age-button" onclick="annualChanges()">
-                        <i class="fa-solid fa-clock"></i>
-                        <span>Age</span>
+                    <button class="menu-btn" onclick="showAbout()">
+                        <i class="fa-solid fa-info-circle"></i>
+                        <span>About</span>
                     </button>
                 </div>
-                <div class="button-container nav-btn">
-                    <button onclick="menu.activities()" class="btn navigation-btn" id="activities-btn">
-                        <i class="fa-solid fa-gamepad"></i>
+            </div>
+        </div>
+
+        <!-- Character Creation Screen -->
+        <div id="create-character-screen">
+            <div id="character-creation-content">
+                <h1>Create Your Character</h1>
+                <div id="creation-buttons">
+                    <button class="creation-btn" onclick="randomCharacter()">
+                        <i class="fa-solid fa-dice"></i>
+                        <span>Random Character</span>
+                        <p>Generate a random character</p>
                     </button>
-                    <p>Activities</p>
+                    <button
+                        class="creation-btn"
+                        onclick="displayCustomization()"
+                    >
+                        <i class="fa-solid fa-user-edit"></i>
+                        <span>Custom Character</span>
+                        <p>Customize your character</p>
+                    </button>
+                </div>
+                <button class="back-btn" onclick="backToMainMenu()">
+                    <i class="fa-solid fa-arrow-left"></i>
+                    Back to Menu
+                </button>
+            </div>
+        </div>
+
+        <div id="modal-background" class="modal">
+            <div class="event-container" id="event-container">
+                <h2 class="event-title" id="event-title"></h2>
+                <hr />
+                <div class="event-body" id="event-body"></div>
+            </div>
+        </div>
+        <div id="events-container"></div>
+        <nav id="navbar">
+            <div
+                id="money-container"
+                onclick="windows.playerData.moneyDashboard()"
+                title="Display flow of money"
+            >
+                <p id="total-money">0 $</p>
+                <p id="balance"></p>
+            </div>
+        </nav>
+        <main>
+            <div id="tale-container">
+                <div id="head-container">Childhood</div>
+                <div id="text-container"></div>
+            </div>
+            <div id="control-container">
+                <div class="row">
+                    <div class="button-container" id="left-btn-container"></div>
+                    <div
+                        class="button-container nav-btn"
+                        id="relationship-container"
+                    >
+                        <button
+                            onclick="menu.relationships()"
+                            class="btn navigation-btn"
+                            id="relation-button"
+                        >
+                            <i class="fa-solid fa-heart"></i>
+                        </button>
+                        <p>Relationships</p>
+                    </div>
+                    <div
+                        class="button-container nav-btn"
+                        id="profile-container"
+                    >
+                        <button
+                            onclick="menu.profile()"
+                            class="btn navigation-btn"
+                        >
+                            <i class="fa-solid fa-user"></i>
+                        </button>
+                        <p>Profile</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div
+                        class="button-container nav-btn"
+                        id="job-btn-container"
+                    >
+                        <button
+                            onclick="handleCareerClick()"
+                            class="btn navigation-btn"
+                            id="career-button"
+                        >
+                            <i class="fa-solid fa-briefcase"></i>
+                        </button>
+                        <p>Career</p>
+                    </div>
+                    <div class="button-container" id="age-btn-container">
+                        <button
+                            id="age-btn"
+                            class="age-button"
+                            onclick="annualChanges()"
+                        >
+                            <i class="fa-solid fa-clock"></i>
+                            <span>Age</span>
+                        </button>
+                    </div>
+                    <div class="button-container nav-btn">
+                        <button
+                            onclick="menu.activities()"
+                            class="btn navigation-btn"
+                            id="activities-btn"
+                        >
+                            <i class="fa-solid fa-gamepad"></i>
+                        </button>
+                        <p>Activities</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- menu -->
+        <menu id="menu-template">
+            <div class="menu-header">
+                <h2 id="menu-title"></h2>
+                <button
+                    id="close-menu"
+                    class="fa-regular fa-circle-xmark"
+                ></button>
+            </div>
+            <hr />
+            <div id="menu-body"></div>
+        </menu>
+        <div id="death-screen">
+            <div id="death-screen-body">
+                <h1 id="death-screen-title">You have died!</h1>
+                <div id="obituary-container"></div>
+                <div class="button-container">
+                    <button
+                        onclick="newLife()"
+                        id="new-life-btn"
+                        class="rectangular-btn"
+                    >
+                        Start a new life
+                    </button>
                 </div>
             </div>
         </div>
-    </main>
-    <!-- menu -->
-    <menu id="menu-template">
-        <div class="menu-header">
-            <h2 id="menu-title"></h2>
-            <button id="close-menu" class="fa-regular fa-circle-xmark"></button>
-        </div>
-        <hr>
-        <div id="menu-body"></div>
-    </menu>
-    <div id="death-screen">
-        <div id="death-screen-body">
-            <h1 id="death-screen-title">You have died!</h1>
-            <div id="obituary-container"></div>
-            <div class="button-container">
-                <button onclick="newLife()" id="new-life-btn" class="rectangular-btn">Start a new life</button>
-            </div>
-        </div>
-    </div>
-    <!-- Game Scripts - Load order is important -->
-    <script src="js/libs.js"></script>
-    <script src="js/gameSystem.js"></script>
-    <script src="js/countriesData.js"></script>
-    <script src="js/careers.js"></script>
-    <script src="js/items.js"></script>
-    <script src="js/assets.js"></script>
-    <script src="js/characters.js"></script>
-    <script src="js/events.js"></script>
-    <script src="js/worldEvents.js"></script>
-    <script src="js/windowsSystem.js"></script>
-    <script src="js/windowsExtended.js"></script>
-    <script src="js/windowsItems.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/menuCore.js"></script>
-    <script src="js/menuProfile.js"></script>
-    <script src="js/menuRelationships.js"></script>
-    <script src="js/menuActivities.js"></script>
-    <script src="js/menuShopping.js"></script>
-    <script src="js/menuCareer.js"></script>
-    <script src="js/menuMusicCareer.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/interface.js"></script>
-    <script>
-        // Initialize menu options after all scripts are loaded
-        document.addEventListener('DOMContentLoaded', function() {
-            if (typeof initializeMenuOptions === 'function') {
-                initializeMenuOptions();
-            }
-        });
-    </script>
+        <!-- Game Scripts - Load order is important -->
+        <script src="js/libs.js"></script>
+        <script src="js/gameSystem.js"></script>
+        <script src="js/countriesData.js"></script>
+        <script src="js/careers.js"></script>
+        <script src="js/items.js"></script>
+        <script src="js/assets.js"></script>
+        <script src="js/characters.js"></script>
+        <script src="js/events.js"></script>
+        <script src="js/worldEvents.js"></script>
+        <script src="js/windowsSystem.js"></script>
+        <script src="js/windowsExtended.js"></script>
+        <script src="js/windowsItems.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/menuCore.js"></script>
+        <script src="js/menuProfile.js"></script>
+        <script src="js/menuRelationships.js"></script>
+        <script src="js/menuActivities.js"></script>
+        <script src="js/menuShopping.js"></script>
+        <script src="js/menuCareer.js"></script>
+        <script src="js/menuMusicCareer.js"></script>
+        <script src="js/menu.js"></script>
+        <script src="js/interface.js"></script>
+        <script>
+            // Initialize menu options after all scripts are loaded
+            document.addEventListener("DOMContentLoaded", function () {
+                if (typeof initializeMenuOptions === "function") {
+                    initializeMenuOptions();
+                }
+            });
+        </script>
     </body>
 </html>
