--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <button
                             id="age-btn"
                             class="age-button"
-                            onclick="annualChanges()"
+                            onclick="annualChangesInterface()"
                         >
                             <i class="fa-solid fa-clock"></i>
                             <span>Age</span>
@@ -229,42 +229,42 @@
             </div>
         </div>
         <!-- Game Scripts - Load order is important -->
-        
-    <script src="js/libs.js"></script>
-    <script src="js/countriesData.js"></script>
-    <script src="js/windowsSystem.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/interface.js"></script>
-    <script src="js/gameSystem.js"></script>
-    <script src="js/gameSettings.js"></script>
-    <script src="js/saveSystem.js"></script>
-    <script src="js/enhancedUI.js"></script>
 
-    <!-- Menu system -->
-    <script src="js/menu.js"></script>
-    <script src="js/menuCore.js"></script>
-    <script src="js/menuProfile.js"></script>
-    <script src="js/menuRelationships.js"></script>
-    <script src="js/menuActivities.js"></script>
-    <script src="js/menuCareer.js"></script>
-    <script src="js/menuShopping.js"></script>
-    <script src="js/menuMusicCareer.js"></script>
+        <script src="js/libs.js"></script>
+        <script src="js/countriesData.js"></script>
+        <script src="js/windowsSystem.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/interface.js"></script>
+        <script src="js/gameSystem.js"></script>
+        <script src="js/gameSettings.js"></script>
+        <script src="js/saveSystem.js"></script>
+        <script src="js/enhancedUI.js"></script>
 
-    <!-- Windows and activities -->
-    <script src="js/windowsExtended.js"></script>
-    <script src="js/windowsItems.js"></script>
+        <!-- Menu system -->
+        <script src="js/menu.js"></script>
+        <script src="js/menuCore.js"></script>
+        <script src="js/menuProfile.js"></script>
+        <script src="js/menuRelationships.js"></script>
+        <script src="js/menuActivities.js"></script>
+        <script src="js/menuCareer.js"></script>
+        <script src="js/menuShopping.js"></script>
+        <script src="js/menuMusicCareer.js"></script>
 
-    <!-- Game features -->
-    <script src="js/events.js"></script>
-    <script src="js/timeEvents.js"></script>
-    <script src="js/worldEvents.js"></script>
-    <script src="js/careers.js"></script>
-    <script src="js/characters.js"></script>
-    <script src="js/items.js"></script>
-    <script src="js/assets.js"></script>
-    <script src="js/musicSystem.js"></script>
-    <script src="js/minigames.js"></script>
-    <script src="js/achievements.js"></script>
+        <!-- Windows and activities -->
+        <script src="js/windowsExtended.js"></script>
+        <script src="js/windowsItems.js"></script>
+
+        <!-- Game features -->
+        <script src="js/events.js"></script>
+        <script src="js/timeEvents.js"></script>
+        <script src="js/worldEvents.js"></script>
+        <script src="js/careers.js"></script>
+        <script src="js/characters.js"></script>
+        <script src="js/items.js"></script>
+        <script src="js/assets.js"></script>
+        <script src="js/musicSystem.js"></script>
+        <script src="js/minigames.js"></script>
+        <script src="js/achievements.js"></script>
 
         <script>
             // Initialize menu options after all scripts are loaded
